@@ -5,6 +5,8 @@ release 0.14.2
 	* removed support for boost-1.33 and earlier (probably didn't work)
 	* fixed potential freezes issues at shutdown
 	* improved error message for python setup script
+	* fixed bug when torrent file included announce-list, but no valid
+	  tracker urls
 
 release 0.14.1
 
